Chore: code simplify audit (#87)
* refactor(benchmark): replace fully qualified names with imports [HIGH-1]

Replace java.util.List and sh.brane.core.abi.TypeSchema.* fully
qualified class names with proper imports at the top of AbiBenchmark.java.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(benchmark): replace fully qualified names with imports [HIGH-2]

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(examples): inline isBlank() helper method [HIGH-3]

Remove duplicate isBlank() helper and inline the null/blank check
directly at the call site for clearer, more direct code.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(examples): inline isBlank() helper method [HIGH-4]

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(examples): inline isBlank() helper method [HIGH-5]

* refactor(examples): inline isBlank() helper method [HIGH-6]

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(examples): inline isBlank() helper method [HIGH-7]

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(primitives): extract longToMinimalBytes() helper method [HIGH-8]

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(primitives): extract bigIntegerToMinimalBytes() helper method [HIGH-9]

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(rpc): use toQuantityHex() helper for hex encoding [HIGH-10]

Add overloaded toQuantityHex(long) method to RpcUtils and update
CallRequest, SimulateCall, and AccountOverride to use the helper
instead of repeating the "0x" + value.toString(16) pattern.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* refactor(rpc): extract common retry loop logic into executeWithRetry() [HIGH-11]

Refactor run() and runRpc() methods in RpcRetry.java to share a common
executeWithRetry() private method. Both methods had ~80% identical code
including parameter validation, retry loop, exception handling, backoff,
